--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodisea"
         tools:targetApi="31">
+        <activity
+            android:name=".activity.cliente.ClienteRestauranteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.cliente.ClienteMainActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.repartidor.RepartidorRestauranteActivity"
             android:exported="false" />
