--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Foodisea"
         tools:targetApi="31">
         <activity
+            android:name=".activity.cliente.ClienteCheckoutActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.cliente.ClienteProductoActivity"
             android:exported="false" />
         <activity
