--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Foodisea"
         tools:targetApi="31">
         <activity
+            android:name=".activity.superadmin.SuperadminMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.repartidor.RepartidorDeliveryMapActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.repartidor.RepartidorVerOrdenActivity"
             android:exported="false" />
         <activity
