--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Foodisea"
         tools:targetApi="31">
         <activity
+            android:name=".activity.superadmin.SuperAdminSelectionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.superadmin.SuperAdminGestionUsuariosActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.adminRes.AdminResNuevoProductoActivity"
             android:exported="false" />
         <activity
