--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Foodisea"
         tools:targetApi="31">
         <activity
+            android:name=".activity.superadmin.SuperAdminGestionAdministradoresActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.superadmin.SuperAdminGestionRestauranteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.superadmin.SuperAdminGestionRepartidorActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.adminRes.AdminResDetallesPedidosActivity"
             android:exported="false" />
         <activity
