--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,10 +54,14 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:33.5.0')
     implementation 'com.google.firebase:firebase-firestore'
+
     //Firebase Messaging
     implementation 'com.google.firebase:firebase-messaging:24.0.3'
 
-    // Dependency for Firebase Storage
+    // Firebase Authentication
+    implementation 'com.google.firebase:firebase-auth:23.1.0'
+
+    // Firebase Storage
     implementation 'com.google.firebase:firebase-storage'
 
     //Otras funcionalidades
