--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    dependencies {
+        classpath 'com.google.gms:google-services:4.4.2'
+    }
+}
+
 plugins {
     id 'com.google.gms.google-services' version '4.4.2' apply false
     alias(libs.plugins.android.application) apply false
 }
+
