--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,15 @@
         android:theme="@style/Theme.Foodisea"
         tools:targetApi="31">
         <activity
+            android:name=".activity.login.SelectRolActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.login.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.login.ConfirmRegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.login.RegisterActivity"
             android:exported="false" />
         <activity
