--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
 
+
+
+    // Animaciones
+    implementation libs.lottie
+
 }
