--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
+
+
     <application
         android:name=".FoodiseaApplication"
         android:allowBackup="true"
@@ -19,6 +21,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodisea"
         tools:targetApi="31">
+
+        <service
+            android:name=".notification.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".activity.adminRes.AdminResPerfilActivity"
             android:exported="false" />
@@ -41,7 +52,7 @@
             android:name=".activity.login.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".activity.login.RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".activity.login.StartAppActivity"
@@ -56,7 +67,7 @@
             android:name=".activity.login.LoginActivity"
             android:exported="false" /> <!-- SERVICIOS -->
         <service
-            android:name=".notificaciones.MyFirebaseMessagingService"
+            android:name=".notification.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
