--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.play.services.maps
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -91,7 +92,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
 
-
+    // Google Maps
+    implementation libs.play.services.maps.v1820
+    implementation libs.play.services.location
 
     // Animaciones
     implementation libs.lottie
