feat: Cliente - realizar pedido y carrito listo :)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-analytics'
 
+
+    // Carrusel de imágenes
+    implementation libs.whynotimagecarousel
+
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
