Add: Vista reportes para admin de res y el primer reporte

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,4 +108,7 @@ dependencies {
 
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.19.0'
 
+    //Graficas
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 }
