--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,27 @@
         android:theme="@style/Theme.Foodisea"
         tools:targetApi="31">
         <activity
+            android:name=".activity.superadmin.SuperAdminEditRestauranteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.superadmin.SuperAdminDetalleRestauranteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.superadmin.SuperAdminSolicitudesRepartidorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.superadmin.SuperAdminEditarPerfilActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.superadmin.SuperAdminInfoPerfilActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.cliente.ClienteEditarPerfilActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.cliente.ClienteHistorialPedidosActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.adminRes.AdminResReportesActivity"
             android:exported="false" />
         <activity
