--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation libs.activity
     implementation libs.constraintlayout
     implementation libs.play.services.maps
+    implementation libs.swiperefreshlayout
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -110,5 +111,8 @@ dependencies {
 
     //Graficas
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    //Volley
+    implementation 'com.android.volley:volley:1.2.1'
 
 }
