--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     // Material Design library
     implementation 'com.google.android.material:material:1.12.0'
 
+    //ViewPager
+    implementation "androidx.viewpager2:viewpager2:1.1.0"
+
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
