--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,4 +118,18 @@ dependencies {
     //Volley
     implementation 'com.android.volley:volley:1.2.1'
 
+    //QR
+    // CameraX
+    def camerax_version = "1.3.0-alpha04"
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:$camerax_version"
+
+    // ML Kit para escaneo de QR
+    implementation 'com.google.mlkit:barcode-scanning:17.3.0'
+
+    // ZXing para generación de QR
+    implementation 'com.google.zxing:core:3.5.2'
+
 }
