implementación inicial de notificaciones con firebase cloud messaging

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,3 +1,5 @@
 /build
 # Firebase config file
 google-services.json
+/app/src/main/res/raw/service_account.json
+/main/res/raw/service_account.json
