--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.19.0'
+    implementation libs.google.auth.library.credentials
 
     //Graficas
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
