--- a/app/.gitignore
+++ b/app/.gitignore
@@ -3,3 +3,4 @@
 google-services.json
 /app/src/main/res/raw/service_account.json
 /main/res/raw/service_account.json
+main/res/raw/service_account.json
