--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
     // Material Design library
     implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
 
     //ViewPager
     implementation "androidx.viewpager2:viewpager2:1.1.0"
