--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,18 @@
         android:theme="@style/Theme.Foodisea"
         tools:targetApi="31">
         <activity
+            android:name=".activity.superadmin.SuperAdminChangePasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.repartidor.RepartidorChangePasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.adminRes.AdminResChangePasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.cliente.ClienteChangePasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.cliente.ClienteConfirmacionEntregaActivity"
             android:exported="false" />
         <activity
